import java.util.Stack;

/**
 * Interface for displaying integers.
 * 
 * <p><strong>SOLID Principle - Interface Segregation:</strong>
 * Provides a specific interface for displaying integers.</p>
 */
public interface IntegerDisplayer {

    /**
     * Displays the list of integers.
     * 
     * @param integers The stack of integers to display.
     * @since 1.1.0
     */
    void display(Stack<Integer> integers);
}