@startuml
title Stack Sorting Program Class Diagram

interface IntegerInput {
    + readIntegers(): Stack<Integer>
}

interface IntegerSorter {
    + sort(integers: Stack<Integer>): void
}

interface IntegerDisplayer {
    + display(integers: Stack<Integer>): void
}

class ConsoleIntegerInput implements IntegerInput {
    + readIntegers(): Stack<Integer>
}

class AscendingOrderSorter implements IntegerSorter {
    + sort(integers: Stack<Integer>): void
}

class ConsoleIntegerDisplayer implements IntegerDisplayer {
    + display(integers: Stack<Integer>): void
}

class MainProgram {
    + main(args: String[]): void
}

MainProgram --> ConsoleIntegerInput : instantiates
MainProgram --> AscendingOrderSorter : instantiates
MainProgram --> ConsoleIntegerDisplayer : instantiates

@enduml